<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Bestehende Strings -->
    <string name="app_name">KnowHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Login und Register -->
    <string name="login">Login</string>
    <string name="register">Registrieren</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="email">E-Mail</string>
    <string name="confirm_password">Passwort bestätigen</string>
    <string name="no_account_register_here">Noch keinen Account? Hier registrieren</string>
    <string name="already_have_account_login_here">Bereits registriert? Hier einloggen</string>


    <!-- Quiz Strings -->
    <string name="menu_quiz">Quiz</string>
    <string name="select_quiz_topic">Wähle ein Quiz-Thema</string>
    <string name="next">Weiter</string>
    <string name="quiz_finished">Quiz beendet!</string>
    <string name="your_score">Dein Ergebnis:</string>
    <string name="new_quiz">Neues Quiz</string>
    <string name="back_to_home">Zurück zur Startseite</string>
    <string name="please_select_answer">Bitte wähle eine Antwort aus</string>
    <string name="question_number">Frage %1$d/%2$d</string>

    <!-- Neue Quiz-Strings -->
    <string name="select_new_topic">Neues Thema wählen</string>
    <string name="topic_android">Android Grundlagen</string>
    <string name="topic_programming">Allgemeine Programmierung</string>
    <string name="topic_description_android">Lerne die Grundlagen der Android-Entwicklung</string>
    <string name="topic_description_programming">Teste dein Wissen zu allgemeinen Programmierkonzepten</string>


    <!-- Add to strings.xml -->
    <string name="progress">Fortschritt</string>
    <string name="overall_progress">Gesamtfortschritt</string>
    <string name="total_questions_answered">Beantwortete Fragen:</string>
    <string name="total_correct_answers">Richtige Antworten:</string>
    <string name="overall_accuracy">Gesamtgenauigkeit:</string>
    <string name="progress_by_topic">Fortschritt nach Thema</string>
    <string name="topic">Thema</string>
    <string name="leaderboard">Bestenliste</string>

    <!-- Add these strings to strings.xml -->
    <string name="questions">Fragen</string>
    <string name="correct">Richtig</string>
    <string name="accuracy">Genauigkeit</string>
    <string name="leaderboard_description">Vergleiche deine Ergebnisse mit anderen Nutzern</string>
    <string name="view_leaderboard">Bestenliste anzeigen</string>
</resources>